[package]
name = "uvc-src"
version = "0.3.0"
authors = ["Magnus Ulimoen <flymagnus@gmail.com>"]
edition = "2021"
license-file = "source/LICENSE.txt"
build = "build.rs"
repository = "https://github.com/mulimoen/libuvc-rs"
description = "Vendored version of libuvc"
links = "uvcsrc"

[features]
jpeg = ["turbojpeg-sys"]
uvc_debugging = []

[dependencies]
turbojpeg-sys = { path = "../../rust-turbojpeg/turbojpeg-sys", optional = true }
#turbojpeg-sys = { version = "1.1.1", optional = true }
libusb-sys = { version = "0.7.0", package = "libusb1-sys" }

[build-dependencies]
cc = "1.0.61"
